feat(api-docs): update swagger docs for shorten url api
